crates/rym_parser/src/tests/snapshots/learn_chumsky__tests__modules__recover_block-6.snap
---
source: src/tests/modules.rs
expression: "&snapshot"
---
--- Input ---
mod out { mod lvl_1 { mod lvl_2 { let in_3 = 0; ]   mod lvl_2   let in_2 = 0; } }
---

Some(
    (
        Module {
            name: Some(
                (
                    "out",
                    4..7,
                ),
            ),
            items: [],
        },
        0..7,
    ),
)

--- Errors ---
[
    Error {
        label: Some(
            Module,
        ),
        span: 24..24,
        reason: Unclosed {
            span: 8..9,
            delimiter: OpenBrace,
        },
        found: Eof,
        expected: [
            CloseBrace,
        ],
    },
    Error {
        label: Some(
            Module,
        ),
        span: 24..24,
        reason: Unexpected,
        found: Eof,
        expected: [
            Func,
            Let,
            Mod,
            CloseBrace,
        ],
    },
]
---
